# mrfx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run_tests.yml
mrfx/: __init__.py
mrfx/abstract/: __init__.py  _distributions.py  _iterative_algorithm.py  _model.py  _sampler.py
mrfx/estimators/: __init__.py  _sem.py  mpm.py
mrfx/experiments/: __init__.py  _benchmark.py
mrfx/models/: _Gaussian.py  _GaussianIid.py  __init__.py  _abstract.py  _abstract_mrf.py  _gmrf.py  _gum.py  _potts.py
mrfx/samplers/: __init__.py  _abstract_gibbs.py  _chromatic_gibbs.py  _exact_sampler.py  _fft.py  _gibbs.py  _gum_samplers.py  _spectral.py  _utils.py
mrfx/utils/: __init__.py  utils.py
notebooks/: GUM_tuto.ipynb  gibbs.ipynb  gibbs_a_posteriori.ipynb  gibbs_samplers_jax.ipynb  gums.ipynb  real_example_segmentation.ipynb
notebooks/code_and_figures_for_article/: gibbs.ipynb  gums.ipynb
tests/: potts_075.npy  requirements.txt  test_distributions.py  test_estimators.py  test_exact_sampler.py  test_models.py  test_samplers.py
