[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jinns"]

[tool.setuptools_scm]
[project]
name = "mrfx"
dynamic = ["version"]
description = "Markov Random Fields with JAX"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.7"
keywords = []
authors = [
  {name = "Hugo Gangloff", email = "hugo.gangloff@inrae.fr"},
]
maintainers = [
  {name = "Hugo Gangloff", email = "hugo.gangloff@inrae.fr"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = ["numpy", "jax", "equinox"]

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib"]

[project.urls]
Repository = ""
Documentation = ""
